// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renderActions should disable the button when I am on a built-in profile: activate 1`] = `
<td
  className="coding-rule-table-meta-cell coding-rule-activation-actions"
>
  <Tooltip
    overlay="coding_rules.need_extend_or_copy"
  >
    <Button
      className="coding-rules-detail-quality-profile-deactivate button-red disabled"
    >
      coding_rules.activate
    </Button>
  </Tooltip>
</td>
`;

exports[`renderActions should disable the button when I am on a built-in profile: deactivate 1`] = `
<td
  className="coding-rule-table-meta-cell coding-rule-activation-actions"
>
  <Tooltip
    overlay="coding_rules.need_extend_or_copy"
  >
    <Button
      className="coding-rules-detail-quality-profile-deactivate button-red disabled"
    >
      coding_rules.deactivate
    </Button>
  </Tooltip>
</td>
`;

exports[`renderActions should render the activate button 1`] = `
<td
  className="coding-rule-table-meta-cell coding-rule-activation-actions"
>
  <ActivationButton
    buttonText="coding_rules.activate"
    className="coding-rules-detail-quality-profile-activate"
    modalHeader="coding_rules.activate_in_quality_profile"
    onDone={[Function]}
    profiles={
      [
        {
          "actions": {
            "edit": true,
          },
          "activeDeprecatedRuleCount": 2,
          "activeRuleCount": 10,
          "childrenCount": 0,
          "depth": 1,
          "isBuiltIn": false,
          "isDefault": false,
          "isInherited": false,
          "key": "key",
          "language": "js",
          "languageName": "JavaScript",
          "name": "name",
          "projectCount": 3,
        },
      ]
    }
    rule={
      {
        "isTemplate": false,
        "key": "javascript:S1067",
        "lang": "js",
        "langName": "JavaScript",
        "name": "Use foo",
        "severity": "MAJOR",
        "status": "READY",
        "sysTags": [
          "a",
          "b",
        ],
        "tags": [
          "x",
        ],
        "type": "CODE_SMELL",
      }
    }
  />
</td>
`;

exports[`renderActions should render the deactivate button 1`] = `
<td
  className="coding-rule-table-meta-cell coding-rule-activation-actions"
>
  <ConfirmButton
    confirmButtonText="yes"
    modalBody="coding_rules.deactivate.confirm"
    modalHeader="coding_rules.deactivate"
    onConfirm={[Function]}
  >
    [Function]
  </ConfirmButton>
</td>
`;

exports[`should render correctly: default 1`] = `
<li
  aria-current={false}
  className="coding-rule"
  data-rule="javascript:S1067"
>
  <table
    className="coding-rule-table"
  >
    <tbody>
      <tr>
        <td>
          <div
            className="coding-rule-title"
          >
            <ForwardRef(Link)
              className="link-no-underline"
              onClick={[Function]}
              to={
                {
                  "pathname": "/coding_rules",
                  "search": "?open=javascript%3AS1067&rule_key=javascript%3AS1067",
                }
              }
            >
              Use foo
            </ForwardRef(Link)>
          </div>
        </td>
        <td
          className="coding-rule-table-meta-cell"
        >
          <div
            className="display-flex-center coding-rule-meta"
          >
            <span
              className="display-inline-flex-center spacer-left note"
            >
              JavaScript
            </span>
            <Tooltip
              overlay="coding_rules.type.tooltip.CODE_SMELL"
            >
              <span
                className="display-inline-flex-center spacer-left note"
              >
                <IssueTypeIcon
                  query="CODE_SMELL"
                />
                <span
                  className="little-spacer-left text-middle"
                >
                  issue.type.CODE_SMELL
                </span>
              </span>
            </Tooltip>
            <TagsList
              allowUpdate={false}
              className="display-inline-flex-center note spacer-left"
              tags={
                [
                  "x",
                  "a",
                  "b",
                ]
              }
            />
            <SimilarRulesFilter
              onFilterChange={[MockFunction]}
              rule={
                {
                  "key": "javascript:S1067",
                  "lang": "js",
                  "langName": "JavaScript",
                  "name": "Use foo",
                  "severity": "MAJOR",
                  "status": "READY",
                  "sysTags": [
                    "a",
                    "b",
                  ],
                  "tags": [
                    "x",
                  ],
                  "type": "CODE_SMELL",
                }
              }
            />
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</li>
`;

exports[`should render correctly: with activation 1`] = `
<li
  aria-current={false}
  className="coding-rule"
  data-rule="javascript:S1067"
>
  <table
    className="coding-rule-table"
  >
    <tbody>
      <tr>
        <td>
          <div
            className="coding-rule-title"
          >
            <ForwardRef(Link)
              className="link-no-underline"
              onClick={[Function]}
              to={
                {
                  "pathname": "/coding_rules",
                  "search": "?open=javascript%3AS1067&rule_key=javascript%3AS1067",
                }
              }
            >
              Use foo
            </ForwardRef(Link)>
          </div>
        </td>
        <td
          className="coding-rule-table-meta-cell"
        >
          <div
            className="display-flex-center coding-rule-meta"
          >
            <span
              className="display-inline-flex-center spacer-left note"
            >
              JavaScript
            </span>
            <Tooltip
              overlay="coding_rules.type.tooltip.CODE_SMELL"
            >
              <span
                className="display-inline-flex-center spacer-left note"
              >
                <IssueTypeIcon
                  query="CODE_SMELL"
                />
                <span
                  className="little-spacer-left text-middle"
                >
                  issue.type.CODE_SMELL
                </span>
              </span>
            </Tooltip>
            <TagsList
              allowUpdate={false}
              className="display-inline-flex-center note spacer-left"
              tags={
                [
                  "x",
                  "a",
                  "b",
                ]
              }
            />
            <SimilarRulesFilter
              onFilterChange={[MockFunction]}
              rule={
                {
                  "key": "javascript:S1067",
                  "lang": "js",
                  "langName": "JavaScript",
                  "name": "Use foo",
                  "severity": "MAJOR",
                  "status": "READY",
                  "sysTags": [
                    "a",
                    "b",
                  ],
                  "tags": [
                    "x",
                  ],
                  "type": "CODE_SMELL",
                }
              }
            />
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</li>
`;
